<resources>
    <string name="app_name">ZyPod Design System</string>
    <string name="understand">متوجه شدم</string>
    <string name="primary_button_text_title">دکمه های پیشفرض اصلی</string>
    <string name="yes_text">بله</string>
    <string name="Buttons">دکمه ها</string>
    <string name="secondary_title_desc">دکمه های ثانویه - outline</string>
    <string name="hover">دکمه های شناور - hover</string>
    <string name="danger_title_button">دکمه های اخطار</string>
    <string name="success_title_button">دکمه های موفقیت</string>
    <string name="btn_disable_mode1">حالت غیر فعال مدل اول</string>
    <string name="btn_disable_mode2">حالت غیر فعال مدل دوم</string>
    <string name="input">ورودی ها - input</string>
    <string name="default_Input">ورودی های پیش فرض</string>
    <string name="error_input">ورودی های همراه با ارور</string>
    <string name="success_input">ورودی های موفقیت آمیز</string>
    <string name="checkbox">چک باکس ها</string>
    <string name="checked">چک شده</string>
    <string name="unchecked">چک نشده</string>
    <string name="toggle">دکمه های toggle</string>
    <string name="switch_text">سوئیچ</string>
    <string name="radio_btn">دکمه های رادیو</string>
    <string name="select_text">انتخاب کنید</string>
    <string name="dropdown_menu">منوهای dropdown</string>
    <string name="default_dropdown_menu">منوی پیشفرض</string>
    <string name="progress_text">نوارهای پیشرفت</string>
    <string name="toolbar_tetx">نوار ابزارها</string>
    <string name="menu_text">منوها</string>
    <string name="register_code">ثبت کدمعرف</string>
    <string name="address_text">آدرس ها</string>
    <string name="account_text">تسویه حساب</string>
    <string name="invite_friends">دعوت از دوستان</string>
    <string name="login_password_text">رمز ورود به برنامه</string>
    <string name="notification_text">اعلان ها</string>
    <string name="notif_text">درصورتیکه اقساط خود را در موعد مقرر پرداخت نکنید، کل مبلغ قسط و یا بخشی از آن بصورت خودکار از حساب شما برداشت خواهد شد.</string>
    <string name="user_have_family_text">این کاربر در باکیدز خانواده دارد</string>
    <string name="error_message_text">پیام های خطا</string>


    <string-array name="spinner_items">
        <item>انتخاب کنید</item>
        <item>گزینه 1</item>
        <item>گزینه 2</item>
        <item>گزینه 3</item>
        <item>گزینه 4</item>
    </string-array>

</resources>