<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txt_title"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_switch"
            style="@style/Text.Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/switch_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />


        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_disable"
            style="@style/Default.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_switch" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_enable"
            style="@style/Default.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/switch_disable"
            app:layout_constraintEnd_toStartOf="@+id/switch_disable"
            app:layout_constraintTop_toTopOf="@+id/switch_disable" />


        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_enable_icon"
            style="@style/Default.Toggle.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/switch_enable"
            app:layout_constraintEnd_toStartOf="@+id/switch_enable"
            app:layout_constraintTop_toTopOf="@+id/switch_enable"
            app:thumbIcon="@drawable/baseline_settings_24" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_disable_icon"
            style="@style/Default.Toggle.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:checked="false"
            app:thumbIcon="@drawable/baseline_settings_24"
            app:layout_constraintBottom_toBottomOf="@+id/switch_enable_icon"
            app:layout_constraintEnd_toStartOf="@+id/switch_enable_icon"
            app:layout_constraintTop_toTopOf="@+id/switch_enable" />

        <TextView
            android:id="@+id/textView1"
            style="@style/Text.Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/radio_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_disable" />


        <TextView
            android:id="@+id/txt_checked"
            style="@style/Text.Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/checked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_unchecked"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/txt_unchecked"
            style="@style/Text.Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unchecked"
            app:layout_constraintBottom_toBottomOf="@+id/txt_checked"
            app:layout_constraintEnd_toStartOf="@+id/txt_checked"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_checked" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Default.Radio.Button"
            android:id="@+id/default_radio_unchecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_unchecked"
            app:layout_constraintStart_toStartOf="@+id/txt_unchecked"
            app:layout_constraintTop_toBottomOf="@+id/txt_unchecked" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Default.Radio.Button"
            android:id="@+id/default_radio_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="@+id/txt_checked"
            app:layout_constraintStart_toStartOf="@+id/txt_checked"
            app:layout_constraintTop_toBottomOf="@+id/txt_checked" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Error.Radio.Button"
            android:id="@+id/error_radio_unchecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/default_radio_unchecked"
            app:layout_constraintStart_toStartOf="@+id/default_radio_unchecked"
            app:layout_constraintTop_toBottomOf="@+id/default_radio_unchecked" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Error.Radio.Button"
            android:id="@+id/error_radio_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="@+id/default_radio_checked"
            app:layout_constraintStart_toStartOf="@+id/default_radio_checked"
            app:layout_constraintTop_toBottomOf="@+id/default_radio_checked" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Success.Radio.Button"
            android:id="@+id/success_radio_unchecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/error_radio_unchecked"
            app:layout_constraintStart_toStartOf="@+id/error_radio_unchecked"
            app:layout_constraintTop_toBottomOf="@+id/error_radio_unchecked" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Success.Radio.Button"
            android:id="@+id/success_radio_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="@+id/error_radio_checked"
            app:layout_constraintStart_toStartOf="@+id/error_radio_checked"
            app:layout_constraintTop_toBottomOf="@+id/error_radio_checked" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Disable.Radio.Button"
            android:id="@+id/disable_radio_unchecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/success_radio_unchecked"
            app:layout_constraintStart_toStartOf="@+id/success_radio_unchecked"
            app:layout_constraintTop_toBottomOf="@+id/success_radio_unchecked" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Disable.Radio.Button"
            android:id="@+id/disable_radio_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="@+id/success_radio_checked"
            app:layout_constraintStart_toStartOf="@+id/success_radio_checked"
            app:layout_constraintTop_toBottomOf="@+id/success_radio_checked" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>